--- a/CoffeeShop.html
+++ b/CoffeeShop.html
@@ -348,7 +348,7 @@
 
             </div><!-- end of box-container --> 
 
-            <div class="created">created by <span> web designer</span> | all rights reserved</div>
+            <div class="created">created by <span>Maryam Yasser</span> | all rights reserved</div>
 
             
         </section> <!-- end of section of footer -->  
